<resources>
    <string name="app_name">Spooky Halloween Tic Tac Toe</string>

    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="four_in_a_row">Vier In Einer Reihe</string>

    <string name="one_player">&lt; Ein Spieler &gt;</string>
    <string name="two_player">&lt; Zwei Spieler &gt;</string>
    <string name="start_game">Spiel Starten</string>
    <string name="ok">OK</string>
    <string name="nope">NEIN</string>
    <string name="back">zurück</string>

    <string name="game_difficulty_easy">einfach</string>
    <string name="game_difficulty_medium">mittel</string>
    <string name="game_difficulty_hard">schwer</string>
    <string name="chose_your_opponent">Suche dir deinen Mitspieler aus</string>

    <string name="won">Sieg!</string>
    <string name="draw">Unentschieden!</string>
    <string name="restart_game">Spiel neu Starten</string>
    <string name="get_it_started">Los Geht\'s!</string>
    <string name="game_has_ended_hint">Das spiel wurde beendet. Bitte Spiel neu starten!</string>
    <string name="player_x_won">Spieler %s hat das Spiel gewonnen</string>
    <string name="player_x_won_headline">Spieler %s\ngewinnt!</string>


    <string name="average_needed_time">ø Zeit:</string>
    <string name="home_one_play_button">ein Spieler</string>
    <string name="home_two_player_button">zwei Spieler</string>

    <!-- statistics view -->
    <string name="statistics_view_x">X</string>
    <string name="statistics_view_o">O</string>
    <string name="statistics_view_won_games">Siege:</string>
    <string name="statistics_average_needed_turns">ø Züge:</string>

    <!-- external Libraries Fragment -->
    <string name="external_libraries_headline">Verwendete externe Bibliotheken</string>
    <string name="used_Libraries_toolbar_item">Benutzte Bibliotheken</string>

    <string name="share_with_friends">Mit Freunden teilen</string>

    <!-- two player mode chooser -->
    <string name="bluetooth_button">Bluetooth</string>
    <string name="bluetooth_host_game_button">Spiel erstellen</string>
    <string name="bluetooth_connect_game_button">mit Spiel verbinden</string>
    <string name="bluetooth_connecting">verbindet</string>
    <string name="bluetooth_connected">verbunden</string>
    <string name="bluetooth_playmode_switched">Spielmodus durch Host auf %s geändert</string>
    <string name="hot_seat">hot seat</string>
    <string name="result_canceled_info">Ups, da ist etwas schiefgelaufen</string>
    <string name="waiting_for_player">Warte auf Spieler</string>

    <string name="play_store_link" translatable="false">https://play.google.com/store/apps/details?id=com.jcDevelopment.tictactoeadfree</string>
    <string name="different_version_code_error">unterschiedliche Versionen gefunden. Bitte Updaten Sie!</string>

    <string name="opponent_left_info_headline">Der Gegner hat das Spiel verlassen</string>

    <string name="ask_another_game_headline">Gegen %s noch einmal spielen?</string>
    <string name="ask_another_game_headline_empty">Noch einmal spielen?</string>
    <string name="ask_another_game_declined">Der Gegner hat die Anfrage abgelehnt</string>
    <string name="no_bounded_devices_found_error">Keine gekoppelten Geräte gefunden.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="square">Square</string>
</resources>