<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_75_opacity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:background="@color/spooky_green"
            android:padding="4dp"
            android:id="@+id/opponent_left_info_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/berk_shire"
            android:text="@string/ask_another_game_headline_empty"
            android:textSize="20sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/asked_for_another_ack_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_spooky_button_purple_set"
            android:elevation="8dp"
            android:fontFamily="@font/berk_shire"
            android:scaleType="fitXY"
            android:text="@string/ok"
            android:textSize="20sp"
            app:layout_constraintDimensionRatio="31:10"
            app:layout_constraintEnd_toStartOf="@id/asked_for_another_decline_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toBottomOf="@+id/opponent_left_info_headline" />

        <Button
            android:id="@+id/asked_for_another_decline_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_spooky_button_purple_set"
            android:elevation="8dp"
            android:fontFamily="@font/berk_shire"
            android:scaleType="fitXY"
            android:text="@string/nope"
            android:textSize="20sp"
            app:layout_constraintDimensionRatio="31:10"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@id/asked_for_another_ack_button"
            app:layout_constraintTop_toBottomOf="@+id/opponent_left_info_headline" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>